fix: ugly hack to hide id_password_helptext
I can't figure out how to do this in the template
so we'll just hide it as invisible in the CSS

--- a/otisweb/static/css/otis.css
+++ b/otisweb/static/css/otis.css
@@ -314,3 +314,8 @@ img.emoji {
   color: grey;
   text-decoration: underline;
 }
+
+/* TODO: ugly hack; I can't figure out how to remove this from template */
+#id_password_helptext {
+  display: none !important;
+}
